doc cleanup